<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="@string/write_plate" />

        <EditText
            android:id="@+id/edtPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:maxLength="6"
            android:textSize="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/groupbuttons">

        <Button
            android:id="@+id/btnInitTravel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#dc4a38"
            android:elevation="5dp"
            android:text="@string/init_travel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLogoutUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#dc4a38"
            android:elevation="5dp"
            android:text="@string/logout_user"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>